--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,8 @@
 <p>Email: rishikesh9508552@gmail.com</p>
 <p>Address:</p>
 <p>
-  Kumar Pg- 3rd Floor, Naidu Complex, Opposite to RV College of Engineering<br />
+  RV College of Engineering<br />
+  Mysore Road<br />
   Bengaluru<br />
   India <br />
 </p>
